# pdf-chat-app

./: .env.example  .gitattributes  .gitignore  Pythonic_RAG_Assignment.ipynb  README.md  app.py  chainlit.md  hello.py  pyproject.toml  rag.excalidraw  test_rag_features.py
aicoolspace/: text_utils.py  vectordatabase.py
